<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ProxerMe</string>
    <string name="section_anime">Anime</string>
    <string name="section_chat">Chat</string>
    <string name="section_donate">Spenden</string>
    <string name="section_manga">Manga</string>
    <string name="section_local_manga">Heruntergeladene Manga</string>
    <string name="section_news">News</string>
    <string name="section_bookmarks">Lesezeichen</string>
    <string name="section_guest">Gast</string>
    <string name="section_login">Anmelden</string>
    <string name="section_user_subtitle">Angemeldet</string>
    <string name="section_ucp">User-Control-Panel</string>
    <string name="section_logout">Abmelden</string>
    <string name="section_info">Info</string>
    <string name="section_settings">Einstellungen</string>
    <string name="section_notifications">Benachrichtigungen</string>
    <string name="section_ucp_overview">Übersicht</string>
    <string name="section_ucp_top_ten">Favoriten</string>
    <string name="section_ucp_history">Chronik</string>
    <string name="section_profile_info">Profil</string>
    <string name="section_top_ten">Favoriten</string>
    <string name="section_user_media_list_anime">Anime</string>
    <string name="section_user_media_list_manga">Manga</string>
    <string name="section_user_comments">Kommentare</string>
    <string name="section_media_info">Info</string>
    <string name="section_comments">Kommentare</string>
    <string name="section_relations">Verbindungen</string>
    <string name="section_industry_info">Info</string>
    <string name="section_industry_projects">Projekte</string>
    <string name="section_translator_group_info">Info</string>
    <string name="section_translator_group_projects">Projekte</string>
    <string name="error_timeout">Der Server hat nicht rechtzeitig geantwortet. Versuche es später noch einmal</string>
    <string name="error_io">Es gab ein Problem bei der Datenübertragung. Versuche es erneut</string>
    <string name="error_parsing">Der Server hat beschädigte Daten gesendet. Versuche es erneut</string>
    <string name="error_unknown">Ein unbekannter Fehler ist aufgetreten. Versuche es erneut</string>
    <string name="error_invalid_token">Du wurdest zu deiner Sicherheit automatisch abgemeldet. Melde dich erneut an
    </string>
    <string name="error_login_credentials">Falsches Passwort oder falscher Nutzername</string>
    <string name="error_login_two_factor_authentication">Bitte gebe deinen Geheimschlüssel der
        Zwei-Faktor-Authentifizierung ein!</string>
    <string name="error_already_in_list">Es gibt bereits einen Eintrag in deiner Liste</string>
    <string name="error_list_full">Deine Liste ist voll</string>
    <string name="error_insufficient_permissions">Diese Information wurde vom Benutzer nicht freigegeben, eventuell
        musst du dich anmelden</string>
    <string name="error_invalid_chapter">Dieses Kapitel wurde noch nicht hochgeladen :/</string>
    <string name="error_invalid_episode">Diese Episode wurde noch nicht hochgeladen :/</string>
    <string name="error_invalid_input">Ungültige Eingabe</string>
    <string name="error_cant_add_user_to_conference">Dieser Nutzer existiert nicht oder kann der Konferenz nicht
        hinzugefügt werden</string>
    <string name="error_invalid_users_for_conference">Es muss mindestens ein existierender Teilnehmer angegeben werden
    </string>
    <string name="error_conference_full">Es können keine weiteren Nutzer zur Konferenz hinzugefügt werden, da sie voll
        ist</string>
    <string name="error_invalid_topic">Ungültiges Thema</string>
    <string name="error_account_expired">Der Account ist abgelaufen</string>
    <string name="error_account_blocked">Der Account wurde geblockt</string>
    <string name="error_api">Die Schnittstelle hat einen Fehler gemeldet. Bitte informiere einen Techniker</string>
    <string name="error_maintenance">Proxer wird grade gewartet. Probiere es später noch einmal</string>
    <string name="error_client">Die App hat fehlerhafte Daten geschickt. Bitte informiere einen Techniker</string>
    <string name="error_invalid_id">Der Eintrag existiert nicht (mehr)</string>
    <string name="error_unsupported_code">Diese Fehler wird nicht unterstützt. Bitte informiere einen Techniker</string>
    <string name="error_login">Du bist nicht angemeldet</string>
    <string name="error_login_required">Für diesen Bereich musst du dich anmelden</string>
    <string name="error_captcha">Es wurden zu viele Anfragen gemacht</string>
    <string name="error_age_confirmation_needed">Für diese Kategorie musst du bestätigen, dass du mindestens 18
        Jahre alt bist</string>
    <string name="error_refresh">Aktualisierung fehlgeschlagen: %s</string>
    <string name="error_unsupported_hoster">Dieser Hoster wird\nnicht unterstützt</string>
    <string name="error_stream_resolution">Fehler beim Laden des Streams. Das Video ist eventuell nicht mehr verfügbar
    </string>
    <string name="error_input_empty">Gib etwas ein</string>
    <string name="error_duplicate_participant">Diesen Teilnehmer hast du schon hinzugefügt</string>
    <string name="error_missing_message">Gib eine Nachricht ein</string>
    <string name="error_missing_participants">Füge mindestens einen Teilnehmer hinzu</string>
    <string name="error_video_deleted">Das Video ist nicht mehr verfügbar</string>
    <string name="error_video_unknown">Es gab ein unbekanntes Problem mit dem Hoster. Versuche es später erneut</string>
    <string name="error_no_data">Keine Daten</string>
    <string name="error_no_data_news">Derzeit sind keine News verfügbar</string>
    <string name="error_no_data_notifications">Derzeit gibt es keine Benachrichtigungen</string>
    <string name="error_no_data_bookmark">Du hast noch keine Lesezeichen angelegt</string>
    <string name="error_no_data_top_ten">Es wurde noch nichts in die Top 10 aufgenommen</string>
    <string name="error_no_data_history">Noch keine Einträge verfügbar</string>
    <string name="error_no_data_episodes">Es sind (noch) keine Episoden verfügbar</string>
    <string name="error_no_data_chapters">Es sind (noch) keine Kapitel verfügbar</string>
    <string name="error_no_data_anime">Aktuell gibt es noch keine Streams</string>
    <string name="error_no_data_relations">Für dieses Werk gibt es keine Verbindungen</string>
    <string name="error_no_data_projects">Es gibt noch keine Projekte</string>
    <string name="error_no_data_comments">Es gibt noch keine Kommentare</string>
    <string name="error_no_data_user_media_list">Es gibt noch keine Einträge</string>
    <string name="error_no_data_local_manga">Du hast noch keine Manga heruntergeladen</string>
    <string name="error_no_data_search">Es wurde nichts gefunden, das den Kriterien entspricht</string>
    <string name="error_no_data_conferences">Du hast noch keine Chats</string>
    <string name="error_no_data_chat">Diese Konferenz hat noch keine Nachrichten</string>
    <string name="error_action_retry">Erneut versuchen</string>
    <string name="error_action_finish">Beenden</string>
    <string name="error_action_captcha">Captcha</string>
    <string name="error_action_login">Anmelden</string>
    <string name="error_action_confirm">Bestätigen</string>
    <string name="error_set_user_info">Eintrag konnte nicht aktualisiert werden: %s</string>
    <string name="error_notification_deletion">Die Benachrichtigung konnte nicht gelöscht werden: %s</string>
    <string name="error_bookmark_deletion">Das Lesezeichen konnte nicht entfernt werden: %s</string>
    <string name="error_topten_entry_removal">Der Eintrag konnte nicht entfernt werden: %s</string>
    <string name="medium_anime_series">Animeserie</string>
    <string name="medium_hentai">Hentai</string>
    <string name="medium_movie">Film</string>
    <string name="medium_ova">OVA</string>
    <string name="medium_manga_series">Mangaserie</string>
    <string name="medium_doujin">Doujinshi</string>
    <string name="medium_h_manga">H-Manga</string>
    <string name="medium_oneshot">One-Shot</string>
    <string name="language_german">Deutsch</string>
    <string name="language_english">Englisch</string>
    <string name="language_german_sub">GerSub</string>
    <string name="language_german_dub">GerDub</string>
    <string name="language_english_sub">EngSub</string>
    <string name="language_english_dub">EngDub</string>
    <string name="language_other">Verschiedenes</string>
    <string name="season_autumn_end">Ende: Herbst %d</string>
    <string name="season_autumn_start">Start: Herbst %d</string>
    <string name="season_spring_end">Ende: Frühling %d</string>
    <string name="season_spring_start">Start: Frühling %d</string>
    <string name="season_summer_end">Ende: Sommer %d</string>
    <string name="season_summer_start">Start: Sommer %d</string>
    <string name="season_winter_end">Ende: Winter %d</string>
    <string name="season_winter_start">Start: Winter %d</string>
    <string name="media_state_airing">Airing</string>
    <string name="media_state_cancelled_sub">Abgebrochener Sub</string>
    <string name="media_state_cancelled">Abgebrochen</string>
    <string name="media_state_finished">Abgeschlossen</string>
    <string name="media_state_pre_airing">Nicht erschienen (Pre-Airing)</string>
    <string name="media_filter_all">Alles</string>
    <string name="media_filter_cancelled">Abgebrochen</string>
    <string name="media_filter_finished">Abgeschlossen</string>
    <string name="media_filter_watching">Am Schauen</string>
    <string name="media_filter_will_watch">Wird noch geschaut</string>
    <string name="media_filter_reading">Am Lesen</string>
    <string name="media_filter_will_read">Wird noch gelesen</string>
    <string name="user_media_progress_watching">Am Schauen (%d)</string>
    <string name="user_media_progress_reading">Am Lesen (%d)</string>
    <string name="user_media_progress_watched">Abgeschlossen</string>
    <string name="user_media_progress_read">Abgeschlossen</string>
    <string name="user_media_progress_will_watch">Wird noch Geschaut</string>
    <string name="user_media_progress_will_read">Wird noch Gelesen</string>
    <string name="fragment_ucp_overview_epsiode_counter_days">Tage</string>
    <string name="fragment_ucp_overview_epsiode_counter_episodes">Episoden</string>
    <string name="fragment_ucp_overview_epsiode_counter_hours">Stunden</string>
    <string name="fragment_ucp_overview_epsiode_counter_minutes">Minuten</string>
    <string name="fragment_ucp_overview_epsiode_counter">Episodencounter</string>
    <string name="fragment_ucp_overview_general">Allgemein</string>
    <string name="fragment_ucp_overview_profile_link">Profillink</string>
    <string name="fragment_ucp_overview_user_id">User ID</string>
    <string name="fragment_translator_group_description">Beschreibung</string>
    <string name="fragment_translator_group_language">Sprache</string>
    <string name="fragment_translator_group_link">Link</string>
    <string name="preference_category_general_title">Allgemein</string>
    <string name="preference_notifications_summary_off">Benachrichtigungen sind nicht aktiviert</string>
    <string name="preference_notifications_summary_on">Benachrichtigungen sind aktiviert</string>
    <string name="preference_notifications_interval_title">Aktualisierungshäufigkeit</string>
    <string name="action_filter">Filter</string>
    <string name="action_sort">Sortierung</string>
    <string name="action_filter_all">Alles</string>
    <string name="action_filter_anime">Anime</string>
    <string name="action_filter_manga">Manga</string>
    <string name="action_sort_count">Nach Episoden</string>
    <string name="action_sort_name">Nach Name</string>
    <string name="action_sort_rating">Nach Bewertungen</string>
    <string name="action_sort_time">Nach Datum</string>
</resources>