<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_category_general"
        android:title="@string/preference_category_general_title">
        <CheckBoxPreference
            android:key="pref_notifications"
            android:summaryOff="@string/preference_notifications_summary_off"
            android:summaryOn="@string/preference_notifications_summary_on"
            android:title="@string/preference_notifications_title" />

        <ListPreference
            android:defaultValue="60"
            android:dependency="pref_notifications"
            android:entries="@array/notifications_interval_titles"
            android:entryValues="@array/notifications_interval_values"
            android:key="pref_notifications_interval"
            android:summary="%s"
            android:title="@string/preference_notifications_interval_title" />
    </PreferenceCategory>
</PreferenceScreen>