<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter"
        android:title="@string/action_filter"
        app:iiv_color="@android:color/white"
        app:iiv_icon="cmd_filter_variant"
        app:iiv_padding="2dp"
        app:iiv_size="24dp"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/all"
                    android:title="@string/action_filter_all"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/anime"
                    android:title="@string/action_filter_anime"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/manga"
                    android:title="@string/action_filter_manga"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
</menu>
