<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sort"
        android:title="@string/action_sort"
        app:iiv_color="@android:color/white"
        app:iiv_icon="cmd_sort"
        app:iiv_padding="2dp"
        app:iiv_size="24dp"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/rating"
                    android:title="@string/action_sort_rating" />
                <item
                    android:id="@+id/time"
                    android:title="@string/action_sort_time" />
            </group>
        </menu>
    </item>
</menu>
