<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.proxerme.app.fragment.ucp.UcpOverviewFragment">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/contentContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="1dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:shrinkColumns="1"
                        android:stretchColumns="0">

                        <TableRow android:id="@+id/languageRow">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="8dp"
                                android:text="@string/fragment_translator_group_language"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="8dp">

                                <ImageView
                                    android:id="@+id/language"
                                    android:layout_width="22dp"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center_vertical|end" />

                            </FrameLayout>
                        </TableRow>

                        <TableRow android:id="@+id/linkRow">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="8dp"
                                android:text="@string/fragment_translator_group_link"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <TextView
                                android:id="@+id/link"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="8dp"
                                android:gravity="end"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textIsSelectable="true"
                                tools:text="Sword Art Online" />
                        </TableRow>
                    </TableLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/descriptionContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="1dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/fragment_translator_group_description"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/colorAccent" />

                        <TextView
                            android:id="@+id/description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textIsSelectable="true" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

    <include layout="@layout/layout_error" />

</FrameLayout>
